Litle bit refacotred